--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-color: black !important;
 }
 
-#boxArea {
+#timeArea {
     height: 100vh;
     width: 100%;
     font-size: 4em;
